--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Introduction"
-description: "Welcome to the new home for your documentation"
+title: "Hello World"
+description: "This is the introduction to the documentation"
 ---
 
 ## Setting up
