--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,32 +1,32 @@
 ---
 title: "Quick Start Guide"
-description: "Get up and running with Dodo Payments in under 10 minutes. Follow our step-by-step guide to set up your account and start processing payments."
+description: "Get up and running with Spotflow in under 10 minutes. Follow our step-by-step guide to set up your account and start processing payments."
 icon: "rocket"
 ---
 <Frame>
   <iframe 
       className="w-full aspect-video rounded-md" 
-      src="https://www.youtube.com/embed/zE6jtNeWdG4"
-      title="Setup Your Account | Dodo Payments"
+      src="https://www.youtube.com/embed/zE6jtNeW"
+      title="Setup Your Account | Spotflow"
       frameBorder="0"
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
       allowFullScreen
   ></iframe>
 </Frame>
 
-## What is Dodo Payments?
+## What is Spotflow?
 
-Welcome to Dodo Payments, your comprehensive solution for managing all aspects of global payment processing. We are a Merchant of Record handling end to end global payments for digital products. Whether you're selling one-time payment products or offering subscription products, Dodo Payments provides a seamless platform to help you handle manage products, handle transactions and ensure compliance—all from one easy-to-use dashboard.
+Welcome to Spotflow, your comprehensive solution for managing all aspects of global payment processing. We are a Merchant of Record handling end to end global payments for digital products. Whether you're selling one-time payment products or offering subscription products, Spotflow provides a seamless platform to help you handle manage products, handle transactions and ensure compliance—all from one easy-to-use dashboard.
 
 ## Quick Start
 
-Want to get started off using Dodo Payments right away ? Our guide below will take you through the most essential steps to get started.
+Want to get started off using Spotflow right away ? Our guide below will take you through the most essential steps to get started.
 
 ### Follow these steps
 
 <AccordionGroup>
   <Accordion title="Step 1 : Login to your account">
-    Log in using your email and password, or sign in with Google. If you don't have an account yet, you can create one at [https://app.dodopayments.com/signup](https://app.dodopayments.com/signup).
+    Log in using your email and password, or sign in with Google. If you don't have an account yet, you can create one at [https://app.spotflow.co/signup](https://app.spotflow.co/signup).
 
   </Accordion>
 
@@ -49,8 +49,8 @@ Want to get started off using Dodo Payments right away ? Our guide below will ta
     <Frame>
       <iframe 
           className="w-full aspect-video rounded-md" 
-          src="https://www.youtube.com/embed/OwMjszInCLc"
-          title="Setup Your Account | Dodo Payments"
+          src="https://www.youtube.com/embed/OwMjs"
+          title="Setup Your Account | Spotflow Payments"
           frameBorder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowFullScreen
@@ -61,7 +61,7 @@ Want to get started off using Dodo Payments right away ? Our guide below will ta
   <Accordion title="Step 4 : Identity Verification and Business Verification">
     **Overview**
 
-    The **Identity Verification** and **Business Verification** processes are critical steps for ensuring compliance with legal and regulatory standards. These verifications confirm the identity of the merchant and the legitimacy of their business. Merchants must complete both steps to unlock full access to the Dodo Payments platform, including payment processing and payouts.
+    The **Identity Verification** and **Business Verification** processes are critical steps for ensuring compliance with legal and regulatory standards. These verifications confirm the identity of the merchant and the legitimacy of their business. Merchants must complete both steps to unlock full access to the  Spotflow platform, including payment processing and payouts.
 
     * **Identity Verification**: Verifies the individual managing the merchant account by requiring personal identification documents.
 
