--- a/api-reference/error-codes.mdx
+++ b/api-reference/error-codes.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Introduction'
+title: 'Error Codes'
 description: 'Spotflow API helps global merchant collect payments in local currency. Learn how to easily integrate our APIs to streamline your in-app payments.'
 ---
 <Note>
