--- a/developer-resources/introduction.mdx
+++ b/developer-resources/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-description: Welcome to the Dodo Payments Developer Resources - built to help you seamlessly integrate secure, scalable, and customizable payment solutions into your stack
+description: Welcome to the Spotflow Developer Resources - built to help you seamlessly integrate secure, scalable, and customizable payment solutions into your stack
 icon: "book-open"
 ---
 
@@ -27,20 +27,20 @@ Before diving into integration, familiarize yourself with these core concepts:
 
 Use the appropriate base URL for your environment:
 
-- Test Mode: [`https://test.dodopayments.com`](https://test.dodopayments.com)
-- Live Mode: [`https://live.dodopayments.com`](https://live.dodopayments.com)
+- Test Mode: [`https://test.spotflow.com`](https://test.spotflow.com)
+- Live Mode: [`https://live.spotflow.com`](https://live.spotflow.com)
 
 Learn more about [Test Mode vs Live Mode](/miscellaneous/test-mode-vs-live-mode).
 
 ## Integration Steps
 
-Follow these steps to integrate Dodo Payments:
+Follow these steps to integrate Spotflow:
 
 <Steps>
   1. [Set up your account](/quickstart) and get your API keys
   2. Choose your integration method:
      - [Follow our tutorial](/developer-resources/integration-tutorial)
-     - [Use our SDKs](/developer-resources/dodo-payments-sdks)
+     - [Use our SDKs](/developer-resources/spotflow-sdks)
      - [Direct API integration](/developer-resources/integration-guide)
   3. [Set up webhooks](/developer-resources/webhooks/intents/webhook-events-guide) for real-time updates
   4. [Test your integration](/miscellaneous/testing-process)
