--- a/developer-resources/introduction.mdx
+++ b/developer-resources/introduction.mdx
@@ -4,61 +4,35 @@ description: Welcome to the Spotflow Developer Resources - built to help you sea
 icon: "book-open"
 ---
 
-## Core Concepts
 
-Before diving into integration, familiarize yourself with these core concepts:
+## API Keys
 
-<CardGroup cols={2}>
-  <Card title="Products" icon="box" href="/developer-resources/managing-products">
-    Create and manage your product catalog
-  </Card>
-  <Card title="Payments" icon="credit-card" href="/developer-resources/integration-guide">
-    Process one-time payments
-  </Card>
-  <Card title="Subscriptions" icon="repeat" href="/developer-resources/subscription-integration-guide">
-    Handle recurring payments
-  </Card>
-  <Card title="Customers" icon="users" href="/api-reference/customers/create-customer">
-    Manage customer data
-  </Card>
-</CardGroup>
+Use the appropriate API keys :
 
-## Environment URLs
+- Test: `sk_test_fXXXXedhXXXXXXXXXXXXX`
+- Live: `sk_live_fXXXXedhXXXXXXXXXXXXX`
 
-Use the appropriate base URL for your environment:
-
-- Test Mode: [`https://test.spotflow.com`](https://test.spotflow.com)
-- Live Mode: [`https://live.spotflow.com`](https://live.spotflow.com)
-
-Learn more about [Test Mode vs Live Mode](/miscellaneous/test-mode-vs-live-mode).
+Learn more about [Test vs Live Keys](/miscellaneous/test-mode-vs-live-mode).
 
 ## Integration Steps
 
 Follow these steps to integrate Spotflow:
 
 <Steps>
-  1. [Set up your account](/quickstart) and get your API keys
+  1. [Set up your account](https://app.spotflow.co/) and get your API keys
   2. Choose your integration method:
-     - [Follow our tutorial](/developer-resources/integration-tutorial)
      - [Use our SDKs](/developer-resources/spotflow-sdks)
      - [Direct API integration](/developer-resources/integration-guide)
-  3. [Set up webhooks](/developer-resources/webhooks/intents/webhook-events-guide) for real-time updates
+  3. [Set up webhooks](https://app.spotflow.co/) for real-time updates
   4. [Test your integration](/miscellaneous/testing-process)
   5. Go live!
 </Steps>
 
-## Need Help?
-
-- Check our [Technical FAQs](/api-reference/technical-faqs)
-- Contact [Developer Support](/miscellaneous/help-support)
 
 ## What's Next?
 
 <CardGroup cols={2}>
-  <Card title="Quick Integration" icon="bolt" href="/developer-resources/integration-tutorial">
-    Follow our step-by-step tutorial
-  </Card>
-  <Card title="API Explorer" icon="compass" href="/api-reference/payments/get-payments">
+  <Card title="API Explorer" icon="compass" href="/api-reference/introduction">
     Browse all available endpoints
   </Card>
 </CardGroup>
