chore:updated api reference

--- a/api-reference/authentication.mdx
+++ b/api-reference/authentication.mdx
@@ -1,33 +1,32 @@
 ---
 title: 'Authentication'
-description: 'Spotflow API helps global merchant collect payments in local currency. Learn how to easily integrate our APIs to streamline your in-app payments.'
+icon: 'lock'
 ---
-<Note>
-  Your API key acts as a unique identifier for your application &
-  allows us to differentiate between test and live mode usage. On the settings page in your merchant dashboard, you have API keys for 
-  test (sk_test_xx) and live mode (sk_live_xxx).
-</Note>
+Secure authentication is crucial for protecting your account and ensuring authorized access. All API requests require authentication with your secret key, kindly include it in the <span style={{color: "red"}}>`Authorization`</span> header for secure access.
+### API Key Management
 
+Spotflow provides two key types for API access: public keys and secret keys. You can manage these keys from your Spotflow dashboard.
 
-Spotflow API is designed to be RESTful, utilizing familiar resource structures for most interactions. However, there might be a few exceptions from the strict REST principles for specific functionalities. These exceptions will be clearly documented within the API reference.
-This means you can expect:
+- **Public Keys**: Primarily used for frontend integrations with Spotflow Inline and Mobile SDKs. These keys are designed to initiate payment collections for your account but cannot modify other account details.
 
-- Predictable Resource-Oriented URLs: URLs are designed to be clear and intuitive, reflecting the resources you're interacting with (e.g., /payments, /plans).
-- Form-Encoded Request Bodies: Data sent to the API uses a simple, well-understood format called form-encoded data.
-- JSON-Encoded Responses: Our API returns data in JSON response format, providing structured and easy-to-parse data.
-- Standard HTTP Methods and Response Codes: Our API utilizes standard HTTP verbs for different actions like GET for retrieving data, POST for creating new resources, PUT for updating existing ones and DEL for trashing existing ones. It also returns standard HTTP response codes to indicate success or failure (e.g., 200 for success, 400 for bad request).
-- Content-Type: When sending request to the API, you should ensure your request includes a Content-Type header set to application/JSON. This informs the API about the format of the data you are sending.
+- **Secret Keys (sk_test_ for test mode, sk_live_ for live mode)**: These keys grant extensive privileges and must be kept confidential, ***Never share your secret keys in public locations like code repositories (GitHub), client-side code, or other unsecured environments.***
 
+### Authentication Process
 
-## API Keys and Authentication: 
+All API requests to Spotflow must be authenticated using your secret key. Here's how to achieve this:
+- **Include your secret key** in the Authorization header of every request. The specific format for including the key will be detailed in the individual API endpoint documentation.
+- **HTTPS is mandatory**: All API requests must be made over HTTPS for secure communication. Requests made over plain HTTP will fail.
+- **Authentication Failure**: Calls made without proper authentication will result in a 401 Unauthorized status code response from the API.
 
-To ensure secure communication with Spotflow APIs, you'll need to authenticate your requests using an API key. All endpoints access requires authentication with your API Keys. Your API key acts as a unique identifier for your application and allows us to differentiate between test and live mode usage. Specific instructions for including your API key within your requests will be provided in the documentation for each API endpoint. Your API Keys can be found on the API Keys and webhooks section of your dashboard.
-All API endpoints are authenticated using Bearer tokens and picked up from the specification file.
+Secure your API requests by including an Authorization header in the following format:
+<p style={{color: 'red'}}>`Authorization: Bearer SECRET_KEY`</p>
 
-```json
-"authorization": [
-  {
-    "bearerToken": []
-  }
-]
+```yaml
+{
+    "Authorization": "Bearer sk_test_6988f8d1539a48ab945764ec361fa3eb"
+}
 ```
+
+To test functionalities specific to your account, you'll need to replace this sample key with your own.
+
+By following these guidelines, you can ensure secure and authorized access while integrating with Spotflow's APIs.
