--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,33 +1,21 @@
 ---
 title: 'Introduction'
-description: 'Spotflow API helps global merchant collect payments in local currency. Learn how to easily integrate our APIs to streamline your in-app payments.'
+sidebarTitle: 'Introduction'
+icon: 'scroll'
+description: 'Spotflow is your global Merchant of Record (MoR) that simplifies payment processing for businesses worldwide.
+We handle everything from global payment acceptance to compliance and settlement — empowering merchants to go global effortlessly. Learn how to easily integrate our APIs to streamline your in-app payments.'
 ---
-<Note>
-  Your API key acts as a unique identifier for your application &
-  allows us to differentiate between test and live mode usage. On the settings page in your merchant dashboard, you have API keys for 
-  test (sk_test_xx) and live mode (sk_live_xxx).
-</Note>
+Spotflow API helps global merchant collect payments in local currency. Learn how to easily integrate our APIs to streamline your in-app payments.
+
+Spotflow API is designed to be <span style={{color: "red"}}>`RESTful`</span>, utilizing familiar resource structures for most interactions. However, there might be a few exceptions from the strict REST principles for specific functionalities. These exceptions will be clearly documented within the API reference. This means you can expect:
 
 
-Spotflow API is designed to be RESTful, utilizing familiar resource structures for most interactions. However, there might be a few exceptions from the strict REST principles for specific functionalities. These exceptions will be clearly documented within the API reference.
-This means you can expect:
+- **Predictable Resource-Oriented URLs**: URLs are designed to be clear and intuitive, reflecting the resources you're interacting with (e.g., /payments, /plans).
+- **Form-Encoded Request Bodies**: Data sent to the API uses a simple, well-understood format called form-encoded data.
+- **JSON-Encoded Responses**: Our API returns data in JSON response format, providing structured and easy-to-parse data.
+- **Standard HTTP Methods and Response Codes**: Our API utilizes standard HTTP verbs for different actions like GET for retrieving data, POST for creating new resources, PUT for updating existing ones and DEL for trashing existing ones. It also returns standard HTTP response codes to indicate success or failure (e.g., 200 for success, 400 for bad request).
+- **Content-Type**: When sending request to the API, you should ensure your request includes a Content-Type header set to application/JSON. This informs the API about the format of the data you are sending.
 
-- Predictable Resource-Oriented URLs: URLs are designed to be clear and intuitive, reflecting the resources you're interacting with (e.g., /payments, /plans).
-- Form-Encoded Request Bodies: Data sent to the API uses a simple, well-understood format called form-encoded data.
-- JSON-Encoded Responses: Our API returns data in JSON response format, providing structured and easy-to-parse data.
-- Standard HTTP Methods and Response Codes: Our API utilizes standard HTTP verbs for different actions like GET for retrieving data, POST for creating new resources, PUT for updating existing ones and DEL for trashing existing ones. It also returns standard HTTP response codes to indicate success or failure (e.g., 200 for success, 400 for bad request).
-- Content-Type: When sending request to the API, you should ensure your request includes a Content-Type header set to application/JSON. This informs the API about the format of the data you are sending.
-
-
-## API Keys and Authentication: 
+### API Keys and Authentication:
 
 To ensure secure communication with Spotflow APIs, you'll need to authenticate your requests using an API key. All endpoints access requires authentication with your API Keys. Your API key acts as a unique identifier for your application and allows us to differentiate between test and live mode usage. Specific instructions for including your API key within your requests will be provided in the documentation for each API endpoint. Your API Keys can be found on the API Keys and webhooks section of your dashboard.
-All API endpoints are authenticated using Bearer tokens and picked up from the specification file.
-
-```json
-"authorization": [
-  {
-    "bearerToken": []
-  }
-]
-```
