--- a/api-reference/payments/create-collection.mdx
+++ b/api-reference/payments/create-collection.mdx
@@ -1,10 +1,10 @@
 ---
-title: Create Payment Collection
+openapi: post /payments
+title: Create Payment
+sidebarTitle: Create Payment
 pagination_prev: null
 hide_title: true
 ---
-
-## Create Payment Collection
 
 Our API helps you collect payments using different payment methods. Payment methods are available for each regions. This endpoint requires that your encrypt the JSON data before making the request. Check out <a target="_blank" href={"/accepting-payment"} style={{textDecoration: "underline", color: "purple"}}>our documentation here</a> for more details on card encryption.   
 
