--- a/api-reference/payments/initialize-collection.mdx
+++ b/api-reference/payments/initialize-collection.mdx
@@ -1,9 +1,9 @@
 ---
-title: Initialize Payment Collection
+openapi: post /payments
+title: Initialize Payment
+sidebarTitle: Initialize Payment
 hide_title: true
 ---
-
-## Initialize Payment Collection
 
 Initiate a payment request to generate a unique payment reference, payment code and checkout URL for your customers 
 
