chore: changed name

--- a/developer-resources/android-sdk.mdx
+++ b/developer-resources/android-sdk.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction
-sidebarTitle: Andriod
+sidebarTitle: Android
 icon: "android"
 description: The Spotflow Android SDK empowers developers to seamlessly integrate payment functionalities into their Android applications. It provides UI components and methods that allows you accept payment in your Android app.
 ---
