feat: done subscription plan

--- a/api-reference/subscription-plans/activate-plan.mdx
+++ b/api-reference/subscription-plans/activate-plan.mdx
@@ -1,6 +1,4 @@
 ---
-openapi: post /plan
-title: Activate Plan
-pagination_prev: null
-hide_title: true
+openapi: /openapi.json POST /plans/{plan-id}/activate
+title: Active Plan
 ---
