--- a/api-reference/subscription-plans/cancel-plan.mdx
+++ b/api-reference/subscription-plans/cancel-plan.mdx
@@ -1,6 +1,4 @@
 ---
-openapi: post /plan
+openapi: /openapi.json POST /plans/{plan-id}/cancel
 title: Cancel Plan
-pagination_prev: null
-hide_title: true
 ---
