--- a/api-reference/subscription-plans/fetch-plan.mdx
+++ b/api-reference/subscription-plans/fetch-plan.mdx
@@ -1,6 +1,5 @@
 ---
-openapi: get /plan
+openapi: /openapi.json GET /plans
 title: Fetch All Plans
-pagination_prev: null
-hide_title: true
+description: This retrieves and lists all subscription plans available on your integration.
 ---
