--- a/api-reference/subscription-plans/list-single-plan.mdx
+++ b/api-reference/subscription-plans/list-single-plan.mdx
@@ -1,6 +1,4 @@
 ---
-openapi: get /plan
+openapi: /openapi.json GET /plans/{plan-id}
 title: Get Single Plan
-pagination_prev: null
-hide_title: true
 ---
