--- a/api-reference/subscription-plans/update-plan.mdx
+++ b/api-reference/subscription-plans/update-plan.mdx
@@ -1,6 +1,5 @@
 ---
-openapi: post /plan
+openapi: /openapi.json POST /plans/{plan-id}
 title: Update Plan
-pagination_prev: null
-hide_title: true
+description: Update the details of an existing subscription plan
 ---
