--- a/api-reference/subscriptions/subscription-activate.mdx
+++ b/api-reference/subscriptions/subscription-activate.mdx
@@ -1,5 +1,5 @@
 ---
-openapi: /openapi.json POST /plans/{plan-id}/activate
+openapi: /openapi.json POST /subscriptions/{subscription-id}/activate
 title: Activate Subscription
 description: Activate a subscription with the plan Id.
 ---
