--- a/api-reference/subscriptions/subscription-cancel.mdx
+++ b/api-reference/subscriptions/subscription-cancel.mdx
@@ -1,5 +1,5 @@
 ---
-openapi: /openapi.json POST /plans/{plan-id}/cancel
+openapi: /openapi.json POST /subscriptions/{subscription-id}/cancel
 title: Cancel Subscription
 sidebarTitle: Cancel Subscription
 description: Cancel a subscription with the plan Id.
