--- a/developer-resources/flutter-sdk.mdx
+++ b/developer-resources/flutter-sdk.mdx
@@ -86,7 +86,7 @@ SpotflowFlutter.startPayment(
 
 ### Testing Your implementation
 
-Test cards can be found [here](https://checkout-demo-beta.vercel.app/) 
+Test cards can be found [here](https://www.spotflow.one/demo) 
 
 ## Running the Example Project
 
