chore: added bulk plan

--- a/api-reference/subscription-plans/create-bulk-plan.mdx
+++ b/api-reference/subscription-plans/create-bulk-plan.mdx
@@ -1,6 +1,4 @@
 ---
-openapi: post /plan
+openapi: /openapi.json POST /bulk-plans
 title: Create Bulk Plans
-pagination_prev: null
-hide_title: true
 ---
