chore: completed single and bulk disbursement, dynamic account, payment collections

--- a/api-reference/subscriptions/subscription-details.mdx
+++ b/api-reference/subscriptions/subscription-details.mdx
@@ -1,5 +1,5 @@
 ---
 openapi: /openapi.json GET /subscriptions/{subscription-id}
-title: Subscriptions Details
+title: Get Subscriptions Details
 description: This is the unique ID of the subscription or customer you want to fetch.
 ---
