--- a/api-reference/subscription-plans/fetch-plan.mdx
+++ b/api-reference/subscription-plans/fetch-plan.mdx
@@ -1,5 +1,5 @@
 ---
 openapi: /openapi.json GET /plans
-title: Fetch All Plans
+title: Get All Plans
 description: This retrieves and lists all subscription plans available on your integration.
 ---
