--- a/api-reference/subscriptions/list-subscriptions.mdx
+++ b/api-reference/subscriptions/list-subscriptions.mdx
@@ -1,5 +1,5 @@
 ---
 openapi: /openapi.json GET /subscriptions
-title: List Subscriptions
+title: Get All Subscriptions
 description: Retrieve details of all subscriptions.
 ---
