chore: changed file naming

--- a/api-reference/dynamic-accounts/dynamic-account-id.mdx
+++ b/api-reference/dynamic-accounts/dynamic-account-id.mdx
@@ -1,5 +1,5 @@
 ---
 openapi: /openapi.json GET /virtual-accounts/{id}
-title: Get Virtual Account by ID
-description: Get details of your created virtual account by its ID.
+title: Get Dynamic Account by ID
+description: Get details of your created dynamic account by its ID.
 ---
