--- a/api-reference/dynamic-accounts/list-dynamic-account.mdx
+++ b/api-reference/dynamic-accounts/list-dynamic-account.mdx
@@ -1,5 +1,5 @@
 ---
 openapi: /openapi.json GET /virtual-accounts
-title: Get All Virtual Accounts
-description: This retrieves and lists all the active virtual accounts you created.
+title: Get All Dynamic Accounts
+description: This retrieves and lists all the active dynamic accounts you created.
 ---
