--- a/developer-resources/introduction.mdx
+++ b/developer-resources/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Introduction 
-description: Welcome to the Spotflow Developer Resources - built to help you seamlessly integrate secure, scalable, and customizable payment solutions into your stack
+description: Welcome to the Spotflow Core - This section contains everything you need to successfully integrate, test, and master the Spotflow platform.
 icon: "book-open"
 ---
 
@@ -12,7 +12,7 @@ Use the appropriate API keys :
 - Test: `sk_test_fXXXXedhXXXXXXXXXXXXX`
 - Live: `sk_live_fXXXXedhXXXXXXXXXXXXX`
 
-Learn more about [Test vs Live Keys](/miscellaneous/test-mode-vs-live-mode).
+Learn more about [Test vs Live Keys](/expert-desk/test-mode-vs-live-mode).
 
 ## Integration Steps
 
@@ -22,12 +22,42 @@ Follow these steps to integrate Spotflow:
   1. [Set up your account](https://app.spotflow.co/) and get your API keys
   2. Choose your integration method:
      - [Use our SDKs](/developer-resources/spotflow-sdks)
-     - [Direct API integration](/developer-resources/integration-guide)
+     - [Redirect Checkout API integration](/api-reference/payments/initialize-collection)
+      - [Direct API integration for merchants with PCI DSS license](/api-reference/payments/create-collection)
   3. [Set up webhooks](https://app.spotflow.co/) for real-time updates
-  4. [Test your integration](/miscellaneous/testing-process)
+  4. [Test your integration](/expert-desk/testing-payments)
   5. Go live!
 </Steps>
 
+<CardGroup cols={1}>
+  <Card title="Integration Guides" icon="rocket" href="/developer-resources/integration-guide">
+    Your roadmap for getting specific payment methods up and running quickly.
+  </Card>
+</CardGroup>
+
+<CardGroup cols={1}>
+  <Card title="Webhooks" icon="bell" href="/developer-resources/webhooks/introduction">
+    Stay ahead of every event with real time alerts.
+  </Card>
+</CardGroup>
+
+<CardGroup cols={1}>
+  <Card title="Testing & Demo Tools" icon="vial" href="/expert-desk/test-mode-vs-live-mode">
+    Don't deploy until you're sure. Use our testing environment to simulate every scenario before pushing anything live.
+  </Card>
+</CardGroup>
+
+<CardGroup cols={1}>
+  <Card title="SDKs" icon="cubes" href="/developer-resources/iOS-sdk">
+    Pre-built code packages for your favorite languages. Drop our SDKs into your project and start accepting payments in minutes, not days.
+  </Card>
+</CardGroup>
+
+<CardGroup cols={1}>
+  <Card title="Libraries" icon="books" href="/developer-resources/react-library">
+    Lightweight code modules for maximum flexibility. Cherry-pick the components you need and build your integration exactly how you want it.
+  </Card>
+</CardGroup>
 
 ## What's Next?
 
