--- a/changelog/introduction.mdx
+++ b/changelog/introduction.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Introduction"
 description: Welcome to the Spotflow Changelog. Or, as we call it, "The Big List of Things We Just Made Better." We're constantly shipping updates to make your payment processing less of a headache. We're obsessed with building a platform that just works for global merchants. Consider this page our public commitment to that goal—a running list of every improvement we send your way. This is where you'll find the proof—no marketing fluff, just the features and fixes that'll make your life as a global merchant easier.
-icon: "cash-register"
+icon: "newspaper"
 ---
 
 # Version Logs
