--- a/changelog/v1.52.4.mdx
+++ b/changelog/v1.52.4.mdx
@@ -1,7 +1,7 @@
 ---
 title: v1.52.4 (15 Oct 2025)
 description: This release was focused on getting you started faster and giving you the tools to grow.
-icon: "arrows-turn-right"
+icon: "tag"
 ---
 
 ## New Features
