--- a/changelog/v1.52.5.mdx
+++ b/changelog/v1.52.5.mdx
@@ -1,7 +1,7 @@
 ---
 title: v1.52.5 (29 Oct 2025)
 description: This release is all about security, control, and giving you more data to work with.
-icon: "arrows-turn-right"
+icon: "tag"
 ---
 
 ## New Features
