--- a/developer-resources/webhooks/accounts.mdx
+++ b/developer-resources/webhooks/accounts.mdx
@@ -11,7 +11,7 @@ icon: "building-columns"
 | **Account Credit Successful**    | `account_credit_successful`      | Occurs when a credit is made successfully to your main wallet, sub wallet or virtual account. |                            |
 | **Account Debit Successful**       | `account_debit_successful`         | Occurs when money is debited or disbursed successfully from your balances. |
 
-## **Payload Structure**
+## **Payload Example Structure**
 
 ## *Account Credit Successful for Main Wallets*
 
