--- a/developer-resources/webhooks/payment-collections.mdx
+++ b/developer-resources/webhooks/payment-collections.mdx
@@ -10,7 +10,7 @@ icon: "money-bill-wave"
 |--------------------------|--------------------------|---------------------------------------------------------------------------------|
 | **Payment Successful**    | `payment_successful`      | Triggered when a payment is successfully processed.                             |
 
-## **Payload Structure**
+## **Payload Example Structure**
 
 ```yaml
 {
