--- a/developer-resources/webhooks/accounts.mdx
+++ b/developer-resources/webhooks/accounts.mdx
@@ -4,7 +4,7 @@ description: This is the structure of the data payload sent to your webhook URL 
 icon: "building-columns"
 ---
 
-## **Payment Collection Events**
+## **Accounts Events**
 
 | **Event Name**           | **Event Type**           | **Description**                                                                 |
 |--------------------------|--------------------------|---------------------------------------------------------------------------------|
@@ -13,7 +13,7 @@ icon: "building-columns"
 
 ## **Payload Example Structure**
 
-## *Account Credit Successful for Main Wallets*
+#### ***Account Credit Successful for Main Wallets***
 
 ```yaml
 {
@@ -46,7 +46,7 @@ icon: "building-columns"
 }
 ```
 
-## *Account Credit Successful for Sub Wallets*
+#### ***Account Credit Successful for Sub Wallets***
 
 ```yaml
 {
@@ -79,7 +79,7 @@ icon: "building-columns"
 }
 ```
 
-## *Account Debit Successful from Main Wallet balances*
+#### ***Account Debit Successful from Main Wallet balances***
 
 ```yaml
 {
